<resources>
    <string name="app_name">Lafyuu</string>
    <string name="welcome_to_lafyuu">Welcome to Lafyuu</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="or">OR</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dont_have_a_account">Don’t have a account?</string>
    <string name="have_a_account">have a account?</string>
    <string name="register">Register</string>
    <string name="create_an_new_account">Create an new account</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="lets_get_started"> Let\'s Get Started</string>
    <string name="log_in_google">Login with Google</string>
    <string name="log_in_fb">Login with Facebook</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="cart">Cart</string>
    <string name="offer">Offer</string>
    <string name="feed">Feed</string>
    <string name="activity">Activity</string>
    <string name="account">Account</string>
    <string name="map">Map</string>
    <string name="category">Category</string>
    <string name="more_category">More Category</string>
    <string name="flash_sale">Flash Sale</string>
    <string name="super_flash_sale">Super Flash Sale</string>
    <string name="favorite_product">Favorite Product</string>
    <string name="notification">Notification</string>
    <string name="mega_sale">Mega Sale</string>
    <string name="see_more">See More</string>
    <string name="man_shirt">Man Shirt</string>
    <string name="recommended_product">Recommended\nProduct</string>
    <string name="recommended_best_for_you">We recommend the best for you</string>
    <string name="search_hint">Search Product</string>
    <string name="dress">Dress</string>
    <string name="man_bag">Man Work\nEquipment</string>
    <string name="woman_bag">Woman Bag</string>
    <string name="man_shoes">Man Shoes</string>
    <string name="woman_pants">Woman Pants</string>
    <string name="bikini">Bikini</string>
    <string name="man_underwear">Man Underwear</string>
    <string name="man_t_shirt">Man T-Shirt</string>
    <string name="woman_t_shirt">Woman T-Shirt</string>
    <string name="high_heels">High Heels</string>
    <string name="skirt">Skirt</string>
    <string name="man_pants">Man Pants</string>
    <string name="man_fashion">Man Fashion</string>
    <string name="woman_fashion">Woman Fashion</string>
    <string name="hint_email">Your Email</string>
    <string name="password_hint">Password</string>
    <string name="full_name_hint">Full Name</string>
    <string name="profile">Profile</string>
    <string name="gender">Gender</string>
    <string name="email">Email</string>
    <string name="super_mega_sale_90">90% Off Super Mega \nSale</string>
    <string name="special_birthday_lafyuu">Special birthday Lafyuu</string>
    <string name="super_flash_sale_50_off">Super Flash Sale \n50% Off</string>
    <string name="use_megsl_cupon_for_get_90_off">Use “MEGSL” Cupon For \nGet 90 % Off</string>
    <string name="loading">Loading...</string>
    <string name="email_not_empty">Email must not be empty</string>
    <string name="password_not_empty">Password must not be empty</string>
    <string name="email_format_incorrect">Email format is incorrect</string>
    <string name="no_internet">No internet</string>
    <string name="login_success">Login Successfully</string>
    <string name="again_password_hint">Again Password</string>
    <string name="fullname_not_empty">Fullname must not be empty</string>
    <string name="confirm_pass_not_same">Passwords are not the same</string>
    <string name="register_success">Register Successfully</string>

</resources>