<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            style="@style/Style.AppBarLayout"
            android:theme="@style/Style.AppBarLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/main_toolbar"
                style="@style/Style.AppBarLayout"
                android:alwaysDrawnWithCache="false"
                app:menu="@menu/app_bar_menu">

                <EditText
                    android:id="@+id/search_ET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_edittext"
                    android:drawableLeft="@drawable/search"
                    android:drawablePadding="10dp"
                    android:drawableTint="@color/color_tint"
                    android:fontFamily="@font/poppins"
                    android:hint="Search Product"
                    android:maxLines="1"
                    android:padding="12dp"
                    android:textAlignment="textStart"
                    android:textColor="@color/text_grey"
                    android:textSize="16sp" />

            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appBarLayout" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/indicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewPager"
            app:tabBackground="@drawable/indicator_selector"
            app:tabGravity="center"
            app:tabIndicatorHeight="0dp" />

        <TextView
            android:id="@+id/category_TV"
            style="@style/Style.TextViewBold"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:text="@string/category"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/indicator" />

        <TextView
            android:id="@+id/more_category_TV"
            style="@style/Style.TextViewBold"
            android:layout_marginTop="10dp"
            android:layout_marginRight="16dp"
            android:text="@string/more_category"
            android:textColor="@color/blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/indicator" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/category_recyclerView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/category_TV"
            tools:itemCount="1"
            tools:listitem="@layout/category_list_layout" />

        <TextView
            android:id="@+id/flash_sale_TV"
            style="@style/Style.TextViewBold"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/flash_sale"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/category_recyclerView" />

        <TextView
            style="@style/Style.TextViewBold"
            android:layout_marginTop="24dp"
            android:layout_marginRight="16dp"
            android:text="@string/see_more"
            android:textColor="@color/blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/category_recyclerView" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/flash_sale_recycler"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/flash_sale_TV"
            tools:itemCount="3"
            tools:listitem="@layout/flash_sale_items" />

        <TextView
            android:id="@+id/mega_sale_TV"
            style="@style/Style.TextViewBold"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/mega_sale"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/flash_sale_recycler" />

        <TextView
            style="@style/Style.TextViewBold"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/see_more"
            android:textColor="@color/blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/flash_sale_recycler" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/mega_sale_recycler"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mega_sale_TV"
            app:reverseLayout="true"
            tools:listitem="@layout/flash_sale_items" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>