<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.account.AccountFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/profile_appbar"
            style="@style/Style.AppBarLayout"
            android:theme="@style/Style.AppBarLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/profile_toolbar"
                style="@style/Style.AppBarLayout">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/Style.TextViewBold"
                    android:text="@string/profile"
                    android:textSize="16sp" />

            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iw_profile"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:padding="2dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toStartOf="@id/tv_profileName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_appbar"
            app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
            app:srcCompat="@drawable/pp"
            app:strokeColor="@android:color/transparent"
            app:strokeWidth="1dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_profileName"
            style="@style/Style.TextViewBold"
            android:layout_width="0dp"
            android:layout_marginStart="10dp"
            android:text="Suret Ramazanov"
            app:layout_constraintBottom_toBottomOf="@+id/iw_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iw_profile"
            app:layout_constraintTop_toTopOf="@id/iw_profile" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iwGenderIcon"
            android:padding="5dp"
            app:layout_constraintBottom_toTopOf="@id/iwEmailIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iw_profile"
            app:srcCompat="@drawable/ic_gender" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvGender"
            style="@style/Style.TextViewBold"
            android:text="@string/gender"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="@id/iwGenderIcon"
            app:layout_constraintStart_toEndOf="@id/iwGenderIcon"
            app:layout_constraintTop_toTopOf="@id/iwGenderIcon" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvGenderProfile"
            style="@style/Style.TextViewBold"
            android:layout_width="0dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="55dp"
            android:text="Male"
            android:textColor="@color/text_grey"
            app:layout_constraintBottom_toBottomOf="@id/tvGender"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvGender" />


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iwEmailIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iwGenderIcon"
            app:srcCompat="@drawable/mail_24"
            app:tint="@color/blue" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvEmail"
            style="@style/Style.TextViewBold"
            android:text="@string/email"
            app:layout_constraintEnd_toEndOf="@id/tvGender"
            app:layout_constraintBottom_toBottomOf="@id/iwEmailIcon"
            app:layout_constraintStart_toEndOf="@id/iwEmailIcon"
            app:layout_constraintTop_toTopOf="@id/iwEmailIcon" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvEmailProfile"
            style="@style/Style.TextViewBold"
            android:layout_width="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="16dp"
            android:maxLength="30"
            android:ellipsize="end"
            android:text="suretramazanov@gmail.com"
            app:layout_constraintStart_toEndOf="@id/tvEmail"
            android:textColor="@color/text_grey"
            app:layout_constraintBottom_toBottomOf="@id/tvEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvEmail" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>